# Redbench-Eval

./: .gitignore  README.md  pyproject.toml
src/redbench_eval/: __init__.py
src/redbench_eval/duckdb/: execute_queries.py  run_queries_test.py  test.ipynb
src/redbench_eval/plots/: anotate_analytic_rescache_invalidations.py  load_data_helper.py  paper_plots.ipynb  paper_plots_redset_similarity.ipynb  plot0.py  plot1a.py  plot1b.py  plot1e.py  plot_runtime_helper.py  plot_utils.py  run_baseline_rewriter.py
src/redbench_eval/utils/: log.py  utils.py
