[project]
name = "redbench-eval"
version = "1.0.0"
description = "Evaluation scripts for Redbench"
authors = [
    { name = "Johannes Wehrstein", email = "johannes.wehrstein@cs.tu-darmstadt.de" }
]
dependencies = [
    "duckdb>=1.3.2",
    "psutil>=7.0.0",
    "pandas>=2.3.1",
    "tqdm>=4.67.1",
    "ipykernel>=6.29.5",
    "pyarrow>=20.0.0",
    "matplotlib>=3.10.3",
    "ipywidgets>=8.1.7",
    "boto3>=1.39.12",
    "dotenv>=0.9.9",
    "tabulate>=0.9.0",
    "osfclient==0.0.5",
    "db-dtypes>=1.4.3",
    "redbench",
]
readme = "README.md"
requires-python = ">= 3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = [
    "ipykernel>=6.29.5",
]

[tool.hatch.metadata]
allow-direct-references = true

[tool.hatch.build.targets.wheel]
packages = ["src/redbench_eval"]

[tool.uv.sources]
redbench = { git = "https://github.com/DataManagementLab/Redbench.git" }

[dependency-groups]
dev = [
    "ipykernel>=7.1.0",
]
